Added a better UI for Store

--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -434,10 +434,10 @@
   "pro_translations": "Übersetzung",
   "pro_update_market_automatic_translation": "Automatische Übersetzung in der Pro-Version verfügbar",
   "pro_version": "KanPractice Pro",
-  "pro_translation": "Neuer Übersetzungstest, der mit ChatGPT 20 zufällige Sätze mit Ihrem eigenen Wortschatz generiert, um Ihr Verständnis zu trainieren.",
-  "pro_ocr": "Neue Erkennungsmethode hinzugefügt: OCR. Erkennen Sie jedes japanische Zeichen über ein Bild.",
-  "pro_context": "Neuer Hinweisprozess im Lernmodus. ChatGPT generiert einen zufälligen Satz, um ein Wort in den Kontext zu setzen, wenn Sie Probleme haben.",
-  "pro_translation_market": "Neue automatische Übersetzung beim Herunterladen einer Liste oder eines Ordners aus dem Market.",
+  "pro_translation": "20 zufällige japanische Sätze werden unter Verwendung Ihres eigenen Vokabulars und ChatGPT generiert, um Ihr Verständnis zu trainieren.\n\nWenn Sie glauben, dass Sie die richtige Übersetzung erhalten haben, werden das Vokabular, das für die Generierung des Satzes verwendet wurde, und eine Übersetzung mit dem ML Kit von Google zur Überprüfung angezeigt.",
+  "pro_ocr": "Jetzt können Sie Fotos aufnehmen oder Bilder aus Ihrer Galerie auswählen, um mit Hilfe von Googles OCR-Kit japanischen Text darauf zu erkennen.\n\nSie können Text durchgehen, bearbeiten und auswählen, um ihn zu übersetzen oder in Jisho suchen, um ihn zu Ihren Listen hinzuzufügen oder den gesamten Text direkt zu übersetzen.",
+  "pro_context": "Wenn Sie Tests oder Übungen zum Lesen, Erkennen und Hören durchführen, kann ein Hinweis angezeigt werden, der Ihnen hilft, den Kontext des Wortes zu verstehen.\n\nDer Hinweis ist ein von ChatGPT zufällig generierter Satz, der das angezeigte Wort enthält.\n\nDies wird Ihnen beim Lernen und beim Leseverständnis helfen.",
+  "pro_translation_market": "Jetzt werden die Market-Listen oder -Ordner, die du herunterlädst, automatisch in deine Landessprache übersetzt!\n\nWenn du eine Liste oder einen Ordner in den Market hochlädst, musst du die Sprache des Materials definieren, damit andere sehen können, in welcher Sprache die Bedeutungen der Wörter und die Definitionen der Grammatik sind.",
   "pro_and_more": "Und mehr...",
   "pro_get_version": "Herunterladen",
   "already_pro": "Du hast bereits alle Vergünstigungen als PRO-Nutzer 😊",
