--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -434,10 +434,10 @@
   "pro_translations": "Translation",
   "pro_update_market_automatic_translation": "Automatic translation available in Pro version",
   "pro_version": "KanPractice Pro",
-  "pro_translation": "New Translation test that generates 20 random sentences with your own vocabulary using ChatGPT to focus on your comprehension.",
-  "pro_ocr": "New recognition method added: OCR. Recognize any japanese character via image.",
-  "pro_context": "New hint process on study modes. ChatGPT will generate a random sentence to put a word in context when you are struggling.",
-  "pro_translation_market": "New automatic translation when downloading any list or folder from the Market.",
+  "pro_translation": "20 random Japanese sentences will be generated using your own vocabulary and ChatGPT to train your comprehension.\n\nWhen you think you got the right translation, the vocabulary used for generating the sentence and a translation using Google’s ML Kit will be displayed to validate.",
+  "pro_ocr": "Now you can take photos or select images from your gallery in order to recognize Japanese text on them with the help of Google’s OCR Kit.\n\nYou can traverse, edit and select text in order to translate or search them in Jisho to add them onto your lists or translate the whole text directly.",
+  "pro_context": "When performing tests or practice for Reading, Recognition and Listening, a hint can be provided to help get the context on the word.\n\nThe hint is a randomly generated sentence by ChatGPT that contains the displayed word.\n\nThis will help you in your study and in your reading comprehension.",
+  "pro_translation_market": "Now the Market lists or folders you download will be automatically translated  to your local language!\n\nWhen uploading a list or a folder to the Market you will have to define the material’s language so others can see in which language are the word’s meanings and grammar’s definitions.",
   "pro_and_more": "And more...",
   "pro_get_version": "Download",
   "already_pro": "You already have all the perks for being a PRO user 😊",
