--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -78,7 +78,7 @@
   "login_removeAccountDialog_hint": "Contraseña",
   "login_removeAccountDialog_header": "Contraseña actual",
   "login_removeAccountDialog_positive": "Eliminar",
-  "login_formDisclaimer": "Al crear una cuenta o iniciar sesión, obtienes acceso a las copias de seguridad. Las copias de seguridad te permitirán mantener tus listas y puntuaciones actuales en todos los dispositivos. Lee los diálogos que aparecen al crear, fusionar o eliminar una copia de seguridad para obtener más información sobre estas operaciones",
+  "login_formDisclaimer": "Al crear una cuenta:\n\n- Puedes acceder a copias de seguridad.\n\n- Te permite crear y descargar listas y carpetas en el Mercado.\n\n- Te permite hacerte PRO.",
   "login_email_hint": "minombre@proveedor.com",
   "login_email_header": "Email",
   "login_password_hint": "••••••••••",
@@ -474,5 +474,6 @@
   "dictionary_convolution": "Dibujo",
   "dictionary_convolution_explain": "Dibuja o escribe caracteres en el lienzo para que un modelo de IA los reconozca. El modelo no acertará todas las veces, trata de dibujar los caracteres lo mejor posible",
   "dictionary_history_explain": "Todas las palabras buscadas en Jisho mediante el escáner o el dibujo aparecerán listadas en esta sección",
-  "ocr_choose_opts": "Elige una de estas opciones para cargar una imagen"
+  "ocr_choose_opts": "Elige una de estas opciones para cargar una imagen",
+  "pro_login_disclaimer": "Tienes que crear una cuenta para ser PRO"
 }
