Added word and grammar search for lists

--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -108,7 +108,7 @@
   "list_details_practice_button_label_ext": "練習",
   "list_details_learningMode_spatial": "Wiederholung Scheitern",
   "list_details_empty": "Kein verfügbares Wort.\n\nFügen Sie neue Wörter zu dieser Liste hinzu, indem Sie auf '+' tippen, oder importieren Sie sie aus Ihrem Backup.",
-  "list_details_searchBar_hint": "Suche nach Wort, Bedeutung, Aussprache",
+  "list_details_searchBar_hint": "Wort, Liste, Bedeutung, Aussprache",
   "kan_list_tile_createDialogForDeletingKanList_title": "KanList entfernen",
   "kan_list_tile_createDialogForDeletingKanList_content": "Möchten Sie diese Liste und ihren gesamten Inhalt wirklich entfernen?",
   "kan_list_tile_createDialogForDeletingKanList_positive": "Entfernen ",
@@ -395,7 +395,7 @@
   "test_info_controlled_pace": "Sie können nur einen Tagestest pro Lernmodus und Tag absolvieren.",
   "list_details_words": "Wörter",
   "list_details_grammar": "Grammatik",
-  "list_details_searchBar_hint_grammar": "Suche nach Name, Definition...",
+  "list_details_searchBar_hint_grammar": "Name, Liste oder Definition",
   "add_grammar_createGrammar_successful": "Grammatikpunkt in KanList erfolgreich erstellt",
   "add_grammar_createGrammar_failed_insertion": "Fehler beim Erstellen des Grammatikpunkts: bereits in anderer Liste",
   "add_grammar_createGrammar_failed": "Generischer Fehler beim Erstellen eines Grammatikpunktes",
