--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -108,7 +108,7 @@
   "list_details_practice_button_label_ext": "練習",
   "list_details_learningMode_spatial": "Fail Repetition",
   "list_details_empty": "No available words.\n\nAdd new words to this list by tapping on '+' or import them from your backup.",
-  "list_details_searchBar_hint": "Search by word, meaning, pronunciation",
+  "list_details_searchBar_hint": "Word, list, meaning, pronunciation",
   "kan_list_tile_createDialogForDeletingKanList_title": "Remove a KanList",
   "kan_list_tile_createDialogForDeletingKanList_content": "Are you sure you want to remove this list and all its content?",
   "kan_list_tile_createDialogForDeletingKanList_positive": "Remove",
@@ -395,7 +395,7 @@
   "test_info_controlled_pace": "You will only be able to complete one daily test per study mode per day.",
   "list_details_words": "Words",
   "list_details_grammar": "Grammar",
-  "list_details_searchBar_hint_grammar": "Search by name, definition...",
+  "list_details_searchBar_hint_grammar": "Name, list or definition",
   "add_grammar_createGrammar_successful": "Grammar point created in KanList successfully",
   "add_grammar_createGrammar_failed_insertion": "Error creating grammar point: already in other list",
   "add_grammar_createGrammar_failed": "Generic error creating grammar point",
