--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -108,7 +108,7 @@
   "list_details_practice_button_label_ext": "練習",
   "list_details_learningMode_spatial": "Repetición de Fallos",
   "list_details_empty": "No hay palabras disponibles.\n\nAñade nuevas palabras a esta lista pulsando en '+' o importalas desde tu copia de seguridad.",
-  "list_details_searchBar_hint": "Buscar por palabra, significado, pronunciación",
+  "list_details_searchBar_hint": "Palabra, lista, significado, pronunciación",
   "kan_list_tile_createDialogForDeletingKanList_title": "Eliminar una KanList",
   "kan_list_tile_createDialogForDeletingKanList_content": "¿Estás seguro de que quieres eliminar esta lista y todo su contenido?",
   "kan_list_tile_createDialogForDeletingKanList_positive": "Eliminar",
@@ -395,7 +395,7 @@
   "test_info_controlled_pace": "Solo podrás completar un test diario por modo de estudio al día.",
   "list_details_words": "Palabras",
   "list_details_grammar": "Gramática",
-  "list_details_searchBar_hint_grammar": "Buscar por nombre, definición...",
+  "list_details_searchBar_hint_grammar": "Nombre, lista o definición",
   "add_grammar_createGrammar_successful": "Punto de gramática creado en KanList con éxito",
   "add_grammar_createGrammar_failed_insertion": "Error al crear punto gramatical: ya está en otra lista",
   "add_grammar_createGrammar_failed": "Error genérico al crear punto gramatical",
