--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -483,5 +483,8 @@
   "updated_pro_ocr": "Unlocked japanese characters recognition through camera or images with the help of Google's ML Kit",
   "updated_pro_context": "Unlocked hints to provide context on words via by ChatGPT",
   "updated_to_pro": "Update to Pro",
-  "check_it_out": "Details"
+  "check_it_out": "Details",
+  "settings_general_stt": "Use speech recognition for Speaking mode",
+  "settings_general_stt_description": "If active, speech recognition shall be used to automatically validate the words of the Speaking practice or test. If not, the validation will be manual as in the other modes",
+  "speaking_stt_change": "Change validation mode"
 }
