--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -486,5 +486,7 @@
   "check_it_out": "Detalles",
   "settings_general_stt": "Utilizar reconocimiento de voz para el modo de Habla",
   "settings_general_stt_description": "Si está activo, se utilizará el reconocimiento de voz para validar automáticamente las palabras de la práctica o test de Habla. Si no, la validación será manual como en los otros modos.",
-  "speaking_stt_change": "Cambiar forma de validación"
+  "speaking_stt_change": "Utilizar reconocimiento de voz",
+  "speaking_normal_change": "Utilizar validación normal",
+  "google_signin": "Iniciar sesión con Google"
 }
