--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -78,7 +78,7 @@
   "login_removeAccountDialog_hint": "Contraseña",
   "login_removeAccountDialog_header": "Contraseña actual",
   "login_removeAccountDialog_positive": "Eliminar",
-  "login_formDisclaimer": "Al crear una cuenta:\n\n- Puedes acceder a copias de seguridad.\n\n- Te permite crear y descargar listas y carpetas en el Mercado.\n\n- Te permite hacerte PRO.",
+  "login_formDisclaimer": "Al crear una cuenta:\n\n- Puedes acceder a copias de seguridad.\n\n- Te permite crear y descargar listas y carpetas en el Mercado.",
   "login_email_hint": "minombre@proveedor.com",
   "login_email_header": "Email",
   "login_password_hint": "••••••••••",
