--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -454,5 +454,8 @@
   "settings_general_stt_description": "If active, speech recognition shall be used to automatically validate the words of the Speaking practice or test. If not, the validation will be manual as in the other modes",
   "speaking_stt_change": "Use speech recognition", 
   "speaking_normal_change": "Use normal validation",
-  "google_signin": "Sign in with Google"
+  "google_signin": "Sign in with Google",
+  "test_time_spent": "Time: ",
+  "test_time_per_card_word": " seconds per word",
+  "test_time_per_card_grammar": " seconds per point"
 }
