--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -457,5 +457,7 @@
   "google_signin": "Sign in with Google",
   "test_time_spent": "Time: ",
   "test_time_per_card_word": " seconds per word",
-  "test_time_per_card_grammar": " seconds per point"
+  "test_time_per_card_grammar": " seconds per point",
+  "settings_general_timer": "Show timer in tests",
+  "settings_general_timer_description": "When active, a timer will be shown in the tests for you to know how much it takes to make one."
 }
