--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -456,6 +456,7 @@
   "speaking_normal_change": "Normale Validierung verwenden",
   "google_signin": "Mit Google anmelden",
   "test_time_spent": "Zeit: ",
+  "test_time_per_card_card": " Sekunden pro Kard Insgesamt",
   "test_time_per_card_word": " Sekunden pro Wort",
   "test_time_per_card_grammar": " Sekunden pro Punkt",
   "settings_general_timer": "Timer in Tests anzeigen",
