--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -456,6 +456,7 @@
   "speaking_normal_change": "Utilizar validación normal",
   "google_signin": "Iniciar sesión con Google",
   "test_time_spent": "Tiempo: ",
+  "test_time_per_card_card": " segundos por tarjeta de media",
   "test_time_per_card_word": " segundos por palabra",
   "test_time_per_card_grammar": " segundos por punto",
   "settings_general_timer": "Mostrar temporizador en tests",
