--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -358,7 +358,7 @@
   "daily_test_cannot_go_back": "Sie führen gerade einen täglichen Test durch. Beenden Sie den Test, Sie können es schaffen!",
   "settings_notifications_label": "Aktivieren/Deaktivieren von Benachrichtigungen",
   "stats_tests_by_type": "Gesamtzahl der Tests nach Typ",
-  "stats_tests_total_acc": "Gesamtgenauigkeit der Tests nach Studienmodus",
+  "stats_tests_total_acc": "Gesamtgenauigkeit der Tests",
   "stats_tests_tap_to_specs": "Tippen Sie auf die Balken, um weitere Details zu sehen",
   "folder_practice_title": "Üben Sie mit einer Teilmenge von Wörtern aus den Listen in diesem Ordner.",
   "disclaimer_spatial_repetition": "Die Praxis basiert auf dem Lernen durch Nicht-Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln",
